@@ -40,6 +40,8 @@ PQXX_HAVE_PQFTABLECOL	internal	libpq
 PQXX_HAVE_PQPUTCOPY	internal	libpq
 PQXX_HAVE_PQRESULTERRORFIELD	internal	libpq
 PQXX_HAVE_PQUNESCAPEBYTEA	internal	libpq
+PQXX_HAVE_PQCLIENTENCODING	internal	libpq
+PQXX_HAVE_PQMBLEN	internal	libpq
 PQXX_HAVE_QUIET_NAN	internal	compiler
 PQXX_HAVE_REVERSE_ITERATOR	public	compiler
 PQXX_HAVE_SLEEP	internal	compiler
