@@ -770,6 +770,27 @@ AC_TRY_COMPILE([#include<${with_postgres_include}/libpq-fe.h>],
 )
 AC_MSG_RESULT($pqencryptpassword)
 
+
+AC_MSG_CHECKING([PQclientEncoding()])
+pqclientencoding=yes
+AC_TRY_COMPILE([#include<${with_postgres_include}/libpq-fe.h>],
+	[return PQclientEncoding(NULL)],
+	AC_DEFINE(PQXX_HAVE_PQCLIENTENCODING,1,[Define if libpq has PQclientEncoding()]),
+	[pqclientencoding=no]
+)
+AC_MSG_RESULT($pqclientencoding)
+
+
+AC_MSG_CHECKING([PQmblen()])
+pqmblen=yes
+AC_TRY_COMPILE([#include<${with_postgres_include}/libpq-fe.h>],
+	[return PQmblen(NULL,1)],
+	AC_DEFINE(PQXX_HAVE_PQMBLEN,1,[Define if libpq has PQmblen()]),
+	[pqmblen=no]
+)
+AC_MSG_RESULT($pqmblen)
+
+
 AC_CHECK_HEADER(limits,
 	[AC_DEFINE(PQXX_HAVE_LIMITS, 1, [Define if <limits> exists])])
 
